Fixes #1757 implement Proper error handling for ( getaddrinfo ENOTFOU… (#1767)
* Fixes #1757 implement Proper error handling for ( getaddrinfo ENOTFOUND metadata.google.internal.)

* Adding Docs

* Adding Docs

* Adding Docs

* Add docs

* Add dynamic type warning

* test

* format

* format

* Update hi.json

--- a/lang/de.json
+++ b/lang/de.json
@@ -158,5 +158,6 @@
   "Information": "Informatie",
   "No account registered with this email": "Server werkt niet/verkeerde url",
   "Dismiss": "afwijzen",
-  "No organizations found Please contact your admin": "Geen organisaties gevonden! Neem contact op met uw beheerder"
+  "No organizations found Please contact your admin": "Geen organisaties gevonden! Neem contact op met uw beheerder",
+  "Notification Feature is not installed": "Meddelelsesfunktionen er ikke installeret"
 }
