--- a/lang/en.json
+++ b/lang/en.json
@@ -12,6 +12,8 @@
   "Enter your password": "Enter your password",
   "Forgot password": "Forgot password",
   "Login": "Login",
+
+  "Notification Feature is not installed": "Notification Feature is not installed",
   "Sit back relax, we'll": "Sit back relax, we'll",
   "Recover": "Recover",
   "your password": "your password",
