--- a/lang/es.json
+++ b/lang/es.json
@@ -14,6 +14,9 @@
   "Login": "Acceso",
   "Sit back relax, we'll": "Siéntese, ",
   "Recover": "",
+
+  "Notification Feature is not installed": "La función de notificación no está instalada",
+
   "your password": "relájese, recuperaremos su contraseña",
   "Recover Password": "Recupera tu contraseña",
   "Select Language": "Seleccione el idioma",
