--- a/lang/fr.json
+++ b/lang/fr.json
@@ -9,6 +9,8 @@
   "Change Password": "Changer le mot de passe",
 
   "Email Hint": "test@test.org",
+  "Notification Feature is not installed": "La fonction de notification n'est pas installée",
+
   "Enter your registered Email": "Entrez votre email enregistré",
   "Enter your password": "Tapez votre mot de passe",
   "Forgot password": "Mot de passe oublié",
