--- a/lang/ja.json
+++ b/lang/ja.json
@@ -14,6 +14,8 @@
   "Login": "ログイン",
   "Sit back relax, we'll": "ゆったりとおくつろぎください。",
   "Recover": "回復",
+
+  "Notification Feature is not installed": "通知機能がインストールされていません",
   "your password": "あなたのパスワード",
   "Recover Password": "パスワードを回復",
   "Select Language": "言語を選択する",
