--- a/lang/hi.json
+++ b/lang/hi.json
@@ -19,6 +19,7 @@
   "Select Language": "भाषा का चयन करें",
   "Default": "डिफ़ॉल्ट मान",
   "Select": "चुनते हैं",
+  "Notification Feature is not installed": "अधिसूचना सुविधा स्थापित नहीं है",
   "Selected Organization": "चयनित संगठन",
   "Continue": "जारी रखें",
   "Enter Organization URL": "संगठन URL दर्ज करें",
