--- a/lang/zh.json
+++ b/lang/zh.json
@@ -14,6 +14,8 @@
   "Login": "登录",
   "Sit back relax, we'll": "高枕无忧, ",
   "Recover": "",
+  "Notification Feature is not installed": "未安装通知功能\n",
+
   "your password": "我们会找回您的密码",
   "Recover Password": "恢复你的密码",
   "Select Language": "选择语言",
