--- a/lang/en.json
+++ b/lang/en.json
@@ -23,7 +23,7 @@
   "Select": "Select",
   "Selected Organization": "Selected Organization",
   "Continue": "Continue",
-  "Enter Organization URL": "Enter Organization URL",
+  "Enter Community URL": "Enter Community URL",
   "Verify": "Verify",
   "Sign Up": "Sign Up",
   "Change language": "Change language",
