--- a/lang/de.json
+++ b/lang/de.json
@@ -89,6 +89,8 @@
   "Cancel": "Abbrechen",
   "Done": "Fertig",
   "Explore Events": "Veranstaltungen erkunden",
+  "Filters":"Filters",
+  "Filter by Date":"Nach Datum filtern",
   "Add Date": "Datum hinzufügen",
   "Event": "Vorfall",
   "My Events": "Meine Veranstaltungen",
