--- a/lang/en.json
+++ b/lang/en.json
@@ -102,6 +102,8 @@
   "Cancel": "Cancel",
   "Done": "Done",
   "Explore Events": "Explore Events",
+  "Filters":"Filters",
+  "Filter by Date":"Filter by Date",
   "Add Date": "Add Date",
   "Event": "Event",
   "My Events": "My Events",
