Add:MultiLingual Support

--- a/lang/es.json
+++ b/lang/es.json
@@ -92,6 +92,15 @@
   "Cancel": "Cancelar",
   "Done": "Hecho",
   "Explore Events": "Explorar eventos",
+  "Filters": "Filtros",
+  "Filter by Date": "Filtrar por fecha",
+  "All Events": "Todos los eventos",
+  "Show all events": "Mostrar todos los eventos",
+  "Show all events created by you": "Mostrar todos los eventos creados por ti",
+  "Registered Events": "Eventos registrados",
+  "Show all events you have registered": "Mostrar todos los eventos en los que te has registrado",
+  "Show events for all": "Mostrar eventos para todos",
+  "Show invite-only events": "Mostrar eventos solo por invitación",
   "Add Date": "Agregar fecha",
   "Event": "Evento",
   "My Events": "Mis Eventos",
