--- a/lang/fr.json
+++ b/lang/fr.json
@@ -99,6 +99,15 @@
   "Cancel": "Annuler",
   "Done": "Fait",
   "Explore Events": "Explorer les événements",
+  "Filters": "Filtres",
+  "Filter by Date": "Filtrer par date",
+  "All Events": "Tous les événements",
+  "Show all events": "Afficher tous les événements",
+  "Show all events created by you": "Afficher tous les événements créés par vous",
+  "Registered Events": "Événements enregistrés",
+  "Show all events you have registered": "Afficher tous les événements auxquels vous êtes inscrit",
+  "Show events for all": "Afficher les événements pour tous",
+  "Show invite-only events": "Afficher les événements sur invitation uniquement",
   "Add Date": "Ajouter une date",
   "Event": "Événement",
   "My Events": "Mes événements",
