--- a/lang/hi.json
+++ b/lang/hi.json
@@ -90,6 +90,15 @@
   "Cancel": "रद्द करना",
   "Done": "किया हुआ",
   "Explore Events": "घटनाओं का अन्वेषण करें",
+  "Filters": "फ़िल्टर",
+  "Filter by Date": "तारीख़ से फ़िल्टर करें",
+  "All Events": "सभी घटनाएँ",
+  "Show all events": "सभी घटनाएँ दिखाएं",
+  "Show all events created by you": "आपके द्वारा बनाई गई सभी घटनाएँ दिखाएं",
+  "Registered Events": "रजिस्टर की गई घटनाएँ",
+  "Show all events you have registered": "आपने जिन घटनाओं में पंजीकृत हुए हैं, उन सभी घटनाएँ दिखाएं",
+  "Show events for all": "सभी के लिए घटनाएँ दिखाएं",
+  "Show invite-only events": "आमंत्रित लोगों के लिए घटनाएँ दिखाएं",
   "Add Date": "तिथि जोड़ें",
   "Event": "प्रतिस्पर्धा",
   "My Events": "मेरे कार्यक्रम",
