--- a/lang/ja.json
+++ b/lang/ja.json
@@ -93,6 +93,15 @@
   "Cancel": "キャンセル",
   "Done": "終わり",
   "Explore Events": "イベントを探索する",
+  "Filters": "フィルター",
+  "Filter by Date": "日付で絞り込む",
+  "All Events": "すべてのイベント",
+  "Show all events": "すべてのイベントを表示",
+  "Show all events created by you": "あなたが作成したすべてのイベントを表示",
+  "Registered Events": "登録済みイベント",
+  "Show all events you have registered": "あなたが登録したすべてのイベントを表示",
+  "Show events for all": "すべてのイベントを表示",
+  "Show invite-only events": "招待限定イベントを表示",
   "Add Date": "日付を追加",
   "Event": "イベント",
   "My Events": "私のイベント",
