--- a/lang/pt.json
+++ b/lang/pt.json
@@ -92,6 +92,15 @@
   "Cancel": "Cancelar",
   "Done": "Feita",
   "Explore Events": "Explorar eventos",
+  "Filters": "Filtros",
+  "Filter by Date": "Filtrar por data",
+  "All Events": "Todos os eventos",
+  "Show all events": "Mostrar todos os eventos",
+  "Show all events created by you": "Mostrar todos os eventos criados por você",
+  "Registered Events": "Eventos registrados",
+  "Show all events you have registered": "Mostrar todos os eventos em que você se registrou",
+  "Show events for all": "Mostrar eventos para todos",
+  "Show invite-only events": "Mostrar apenas eventos com convite",
   "Add Date": "Adicionar Data",
   "Event": "Evento",
   "My Events": "Meus Eventos",
