fixing coverage and adding translation

--- a/lang/de.json
+++ b/lang/de.json
@@ -159,5 +159,6 @@
   "No account registered with this email": "Server werkt niet/verkeerde url",
   "Dismiss": "afwijzen",
   "No organizations found Please contact your admin": "Geen organisaties gevonden! Neem contact op met uw beheerder",
-  "Notification Feature is not installed": "Meddelelsesfunktionen er ikke installeret"
+  "Notification Feature is not installed": "Meddelelsesfunktionen er ikke installeret",
+  "JOIN":"BEITRETEN"
 }
