--- a/lang/es.json
+++ b/lang/es.json
@@ -160,5 +160,6 @@
   "Information": "Información",
   "No account registered with this email": "El servidor no se está ejecutando/url",
   "Dismiss": "despedir",
-  "No organizations found Please contact your admin": "Neniuj organizoj trovitaj! Bonvolu kontakti vian administranton"
+  "No organizations found Please contact your admin": "Neniuj organizoj trovitaj! Bonvolu kontakti vian administranton",
+  "JOIN":"UNIRSE"
 }
