--- a/lang/fr.json
+++ b/lang/fr.json
@@ -162,5 +162,6 @@
   "Logout": "Se déconnecter",
   "Settings": "Paramètres",
   "Dark Theme": "Thème sombre",
-  "No organizations found Please contact your admin": "Aucune organisation trouvée ! Veuillez contacter votre administrateur"
+  "No organizations found Please contact your admin": "Aucune organisation trouvée ! Veuillez contacter votre administrateur",
+  "JOIN":"REJOINDRE"
 }
