--- a/lang/hi.json
+++ b/lang/hi.json
@@ -158,5 +158,6 @@
   "Information": "जानकारी",
   "No account registered with this email": "सर्वर नहीं चल रहा/गलत url",
   "Dismiss": "नकार",
-  "No organizations found Please contact your admin": "कोई संगठन नहीं मिला! कृपया अपने व्यवस्थापक से संपर्क करें"
+  "No organizations found Please contact your admin": "कोई संगठन नहीं मिला! कृपया अपने व्यवस्थापक से संपर्क करें",
+  "JOIN":"जोड़ना"
 }
