--- a/lang/pt.json
+++ b/lang/pt.json
@@ -160,5 +160,6 @@
   "Information": "Informação",
   "No account registered with this email": "Servidor não está em execução/url errado",
   "Dismiss": "liberar",
+  "JOIN":"ENTRAR",
   "No organizations found Please contact your admin": "Neniuj organizoj trovitaj! Bonvolu kontakti vian administranton"
 }
