--- a/lang/zh.json
+++ b/lang/zh.json
@@ -159,5 +159,6 @@
   "Information": "信息",
   "No account registered with this email": "服务器未运行/网址错误",
   "Dismiss": "解雇",
-  "No organizations found Please contact your admin": "Neniuj organizoj trovitaj! Bonvolu kontakti vian administranton"
+  "No organizations found Please contact your admin": "Neniuj organizoj trovitaj! Bonvolu kontakti vian administranton",
+  "JOIN":"加入"
 }
