fixing coverage and adding translation

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -162,5 +162,5 @@
   "No account registered with this email": "サーバーが実行されていない/間違った URL",
   "Dismiss": "解散",
   "No organizations found Please contact your admin": "組織が見つかりません!管理者に連絡してください",
-  "JOIN": "加入"
+  "JOIN": "参加する"
 }
