added tests to apptour file

--- a/lang/de.json
+++ b/lang/de.json
@@ -161,7 +161,6 @@
   "No organizations found Please contact your admin": "Geen organisaties gevonden! Neem contact op met uw beheerder",
   "Notification Feature is not installed": "Meddelelsesfunktionen er ikke installeret",
   "For complete access, please": "Für vollständigen Zugriff bitte",
-  "  join an organization.": "  einer Organisation beitreten."
-
+  "  join an organization.": "  einer Organisation beitreten.",
   "JOIN":"BEITRETEN"
 }
