--- a/lang/en.json
+++ b/lang/en.json
@@ -166,5 +166,7 @@
   "Settings": "Settings",
   "Dark Theme": "Dark Theme",
   "No organizations found Please contact your admin": "No organizations found ! Please contact your admin",
+  "For complete access, please": "For complete access, please",
+  "  join an organization.": "  join an organization.",
   "JOIN":"JOIN"
 }
