--- a/lang/es.json
+++ b/lang/es.json
@@ -162,6 +162,6 @@
   "Dismiss": "despedir",
   "No organizations found Please contact your admin": "Neniuj organizoj trovitaj! Bonvolu kontakti vian administranton",
   "For complete access, please": "Para acceso completo, por favor",
-  "  join an organization.": "  unirse a una organización."
+  "  join an organization.": "  unirse a una organización.",
   "JOIN":"UNIRSE"
 }
