--- a/lang/fr.json
+++ b/lang/fr.json
@@ -164,6 +164,6 @@
   "Dark Theme": "Thème sombre",
   "No organizations found Please contact your admin": "Aucune organisation trouvée ! Veuillez contacter votre administrateur",
   "For complete access, please": "Pour un accès complet, veuillez",
-  "  join an organization.": "  rejoindre une organisation."
+  "  join an organization.": "  rejoindre une organisation.",
   "JOIN":"REJOINDRE"
 }
