--- a/lang/hi.json
+++ b/lang/hi.json
@@ -160,6 +160,6 @@
   "Dismiss": "नकार",
   "No organizations found Please contact your admin": "कोई संगठन नहीं मिला! कृपया अपने व्यवस्थापक से संपर्क करें",
   "For complete access, please": "पूर्ण पहुंच के लिए, कृपया",
-  "  join an organization.": "  किसी संगठन से जुड़ें."
+  "  join an organization.": "  किसी संगठन से जुड़ें.",
   "JOIN":"जोड़ना"
 }
