--- a/lang/ja.json
+++ b/lang/ja.json
@@ -163,6 +163,6 @@
   "Dismiss": "解散",
   "No organizations found Please contact your admin": "組織が見つかりません!管理者に連絡してください",
   "For complete access, please": "完全にアクセスするには、",
-  "  join an organization.": "  組織に参加します。"
+  "  join an organization.": "  組織に参加します。",
   "JOIN": "参加する"
 }
