--- a/lang/zh.json
+++ b/lang/zh.json
@@ -161,6 +161,6 @@
   "Dismiss": "解雇",
   "No organizations found Please contact your admin": "Neniuj organizoj trovitaj! Bonvolu kontakti vian administranton",
   "For complete access, please": "如需完整访问，请",
-  "  join an organization.": "  加入一个组织。"
+  "  join an organization.": "  加入一个组织。",
   "JOIN":"加入"
 }
