Refactor Talawa URL to Hamburger menu. (#2227)
* fetchmore bug fix in organizationlist widget

* fetchmore result typecast

* Refactor talawa conneciton url to hamburger menu

* minor changes

* minor fixes

* minor fixes

* minor fixes

* added comments to the files mentioned in the failing test case.

* added comments

* minor fixes

* ran build runner

* fixed fail test

* Bug fix: Edited tag does not get updated immediately (#2224)

* Fixing bug to join or switch to any joined org (#2216)

* Fixing bug to join or switch to any joined org

* fixing linting errors

* fixing

* fixing coverage

* fixing overflow error

* fixing overflow error

* Fixes Snackbar clipping by adding an auto scroll and duration based on length of message (#2231)

* fix: Snackbar clipping by adding an auto scroll based on length of message

* changes to tests and added documentation

* minor changes to documentation

* Navigation Services Test Written (#2230)

* Navigation Services Test Written

* Null Check Error Fixed

* Update pull_request_template.md

* Revert "Navigation Services Test Written (#2230)" (#2234)

This reverts commit 23c2a74759112fb5fc130998837ad138de530367.

* Refactor talawa conneciton url to hamburger menu

* Bug fix: Edited tag does not get updated immediately (#2224)

* Refactor talawa conneciton url to hamburger menu

* Bug fix: Edited tag does not get updated immediately (#2224)

* add some tests

* added some tests

* added tests to userConfig Service

* fixed failing tests

* fixed failing tests

* added tests for explore_events_demo page

* added comments for event_card widget

* made add_post_page 100% code covered.

* Refactor talawa conneciton url to hamburger menu

* Navigation Services Test Written (#2230)

* Navigation Services Test Written

* Null Check Error Fixed

* add tests to mainscreenviewModel

* resolve conflicts

* fixed failing test

* added tests

--- a/lang/de.json
+++ b/lang/de.json
@@ -21,7 +21,7 @@
   "Select": "Auswählen",
   "Selected Organization": "Ausgewählte Organisation",
   "Continue": "Weitermachen",
-  "Enter Organization URL": "Organisations-URL eingeben",
+  "Enter Community URL": "Geben Sie die Community-URL ein",
   "Verify": "Verifizieren",
   "Sign Up": "Anmeldung",
   "Change language": "Sprache ändern",
@@ -160,5 +160,7 @@
   "Dismiss": "afwijzen",
   "No organizations found Please contact your admin": "Geen organisaties gevonden! Neem contact op met uw beheerder",
   "Notification Feature is not installed": "Meddelelsesfunktionen er ikke installeret",
+  "For complete access, please": "Für vollständigen Zugriff bitte",
+  "  join an organization.": "  einer Organisation beitreten.",
   "JOIN":"BEITRETEN"
 }
