--- a/lang/en.json
+++ b/lang/en.json
@@ -168,5 +168,7 @@
   "No organizations found Please contact your admin": "No organizations found ! Please contact your admin",
   "For complete access, please": "For complete access, please",
   "  join an organization.": "  join an organization.",
-  "JOIN":"JOIN"
+  "JOIN":"JOIN",
+  "Camera": "Camera",
+  "Gallery": "Gallery"
 }
