--- a/lang/zh.json
+++ b/lang/zh.json
@@ -162,5 +162,7 @@
   "No organizations found Please contact your admin": "Neniuj organizoj trovitaj! Bonvolu kontakti vian administranton",
   "For complete access, please": "如需完整访问，请",
   "  join an organization.": "  加入一个组织。",
-  "JOIN":"加入"
+  "JOIN":"加入",
+  "Camera": "相机",
+  "Gallery": "画廊"
 }
