--- a/lang/es.json
+++ b/lang/es.json
@@ -163,5 +163,7 @@
   "No organizations found Please contact your admin": "Neniuj organizoj trovitaj! Bonvolu kontakti vian administranton",
   "For complete access, please": "Para acceso completo, por favor",
   "  join an organization.": "  unirse a una organización.",
-  "JOIN":"UNIRSE"
+  "JOIN":"UNIRSE",
+  "Camera": "Cámara",
+  "Gallery": "Galería"
 }
