--- a/lang/fr.json
+++ b/lang/fr.json
@@ -165,5 +165,7 @@
   "No organizations found Please contact your admin": "Aucune organisation trouvée ! Veuillez contacter votre administrateur",
   "For complete access, please": "Pour un accès complet, veuillez",
   "  join an organization.": "  rejoindre une organisation.",
-  "JOIN":"REJOINDRE"
+  "JOIN":"REJOINDRE",
+  "Camera": "Caméra",
+  "Gallery": "Galerie"
 }
