--- a/lang/pt.json
+++ b/lang/pt.json
@@ -163,5 +163,7 @@
   "No organizations found Please contact your admin": "Neniuj organizoj trovitaj! Bonvolu kontakti vian administranton",
   "For complete access, please": "Para acesso completo, por favor",
   "  join an organization.": "  ingressar em uma organização.",
-  "JOIN":"ENTRAR"
+  "JOIN":"ENTRAR",
+  "Camera": "Câmera",
+  "Gallery": "Galeria"
 }
