--- a/lang/zh.json
+++ b/lang/zh.json
@@ -15,7 +15,6 @@
   "Sit back relax, we'll": "高枕无忧, ",
   "Recover": "",
   "Notification Feature is not installed": "未安装通知功能\n",
-
   "your password": "我们会找回您的密码",
   "Recover Password": "恢复你的密码",
   "Select Language": "选择语言",
@@ -164,5 +163,5 @@
   "  join an organization.": "  加入一个组织。",
   "JOIN":"加入",
   "Camera": "相机",
-  "Gallery": "画廊"
+  "Galler": "画廊"
 }
