--- a/lang/en.json
+++ b/lang/en.json
@@ -163,5 +163,5 @@
   "  join an organization.": "  join an organization.",
   "JOIN":"JOIN",
   "Camera": "Camera",
-  "Gallery": "Gallery"
+  "Galler": "Gallery"
 }
