testing when key is wrong in other translation files

--- a/lang/de.json
+++ b/lang/de.json
@@ -144,7 +144,7 @@
   "Switched to": "Gewechselt zu",
   "Organisation already joined": "Organisation bereits beigetreten",
   "Membership request already sent": "Mitgliedsantrag bereits gesendet",
-  "Select one organization to continue": "Wählen Sie eine Organisation aus, um fortzufahren",
+  "Select one organization to continu": "Wählen Sie eine Organisation aus, um fortzufahren",
   "SomeThing went wrong": "Etwas ist schief gelaufen",
   "Join in request sent to": "Beitrittsanfrage gesendet an",
   "successfully": "erfolgreich",
