--- a/lang/en.json
+++ b/lang/en.json
@@ -163,8 +163,5 @@
   "  join an organization.": "  join an organization.",
   "JOIN":"JOIN",
   "Camera": "Camera",
-  "Gallery": "Gallery",
-  "Parag":"Parag",
-  "Parag1":"Parag",
-  "Para21":"Parag"
+  "Gallery": "Gallery"
 }
