--- a/lang/pt.json
+++ b/lang/pt.json
@@ -13,9 +13,7 @@
   "Forgot password": "Esqueceu sua senha",
   "Login": "Conecte-se",
   "Sit back relax, we'll": "Sente-se relaxe, vamos",
-
   "Notification Feature is not installed": "O recurso de notificação não está instalado",
-
   "Recover": "Recuperar",
   "your password": "sua senha",
   "Recover Password": "Recuperar senha",
@@ -165,5 +163,5 @@
   "  join an organization.": "  ingressar em uma organização.",
   "JOIN":"ENTRAR",
   "Camera": "Câmera",
-  "Gallery": "Galeria"
+  "Galler": "Galeria"
 }
