testing if new script displays the correct error for new key that is not present in non default files

--- a/lang/en.json
+++ b/lang/en.json
@@ -163,5 +163,6 @@
   "  join an organization.": "  join an organization.",
   "JOIN":"JOIN",
   "Camera": "Camera",
-  "Gallery": "Gallery"
+  "Gallery": "Gallery",
+  "Parag":"Parag"
 }
