--- a/lang/pt.json
+++ b/lang/pt.json
@@ -163,5 +163,5 @@
   "  join an organization.": "  ingressar em uma organização.",
   "JOIN":"ENTRAR",
   "Camera": "Câmera",
-  "Galler": "Galeria"
+  "Gallery": "Galeria"
 }
