--- a/lang/es.json
+++ b/lang/es.json
@@ -163,5 +163,5 @@
   "  join an organization.": "  unirse a una organización.",
   "JOIN":"UNIRSE",
   "Camera": "Cámara",
-  "Galler": "Galería"
+  "Gallery": "Galería"
 }
