--- a/lang/hi.json
+++ b/lang/hi.json
@@ -1,167 +1,206 @@
 {
-  "Hello": "नमस्ते",
-  "User Name": "उपयोगकर्ता नाम",
-  "we've": "हमने",
-  "got you covered": "आपको कवर कर लिया है",
-  "password": "पास वर्ड दर्ज करें",
-  "Enter new password": "नया पासवर्ड दर्ज करें",
-  "Re-Enter your password": "दुबारापासवडृ िलखो",
-  "Change Password": "पासवर्ड बदलें",
-  "Email Hint": "test@test.org",
-  "Enter your registered Email": "अपना पंजीकृत ईमेल दर्ज करें",
-  "Enter your password": "अपना पासवर्ड डालें",
-  "Forgot password": "क्या आप पासवर्ड भूल गए",
-  "Login": "लॉग इन करें",
-  "Sit back relax, we'll": "आराम से बैठें, हम",
-  "Recover": "रिकवर कर लेंगे",
-  "your password": "आपका पासवर्ड",
-  "Recover Password": "पासवर्ड पुनः प्राप्त करना",
-  "Select Language": "भाषा का चयन करें",
-  "Default": "डिफ़ॉल्ट मान",
-  "Select": "चुनते हैं",
-  "Notification Feature is not installed": "अधिसूचना सुविधा स्थापित नहीं है",
-  "Selected Organization": "चयनित संगठन",
-  "Continue": "जारी रखें",
-  "Enter Community URL": "समुदाय URL दर्ज करें",
-  "Verify": "सत्यापित करें",
-  "Sign Up": "साइन अप करें",
-  "Change language": "भाषा बदलें",
-  "First Name Hint": "राहुल",
-  "Enter your first name": "अपना पहला नाम दर्ज करें",
-  "Last Name Hint": "कुमार",
-  "Enter your last name": "अपना अंतिम नाम दर्ज करें",
-  "Confirm your password": "अपने पासवर्ड की पुष्टि करें",
-  "Next": "अगला",
-  "Request Sent to": "अनुरोध भेजा गया",
-  "Log out": "लॉग आउट",
-  "Join": "अपने संगठनों",
-  "and": "से",
-  "Collaborate": "जुड़ें",
-  "with your": "और सहयोग करें",
-  "Organizations": "",
-  "Title from the viewMode GSoC branch": "व्यूमोड जीएसओसी शाखा से शीर्षक",
-  "Please verify URL first": "कृपया पहले URL सत्यापित करें",
-  "Enter a valid URL": "एक मान्य यूआरएल दर्ज करें",
-  "Firstname must not be left blank.": "प्रथम नाम खाली नहीं छोड़ा जाना चाहिए।",
-  "Invalid Firstname": "अमान्य प्रथम नाम",
-  "Lastname must not be left blank.": "उपनाम खाली नहीं छोड़ा जाना चाहिए।",
-  "Invalid Lastname": "अमान्य अंतिम नाम",
-  "Email must not be left blank": "ईमेल खाली नहीं छोड़ना चाहिए",
-  "Please enter a valid Email Address": "कृपया एक वैध ई - मेल एड्रेस डालें",
-  "Password must not be left blank": "पासवर्ड खाली नहीं छोड़ना चाहिए",
-  "Your password must be at least 8 characters long, contain at least one numeric, one uppercase and one lowercase letters and one special character (@,#,$,etc.)": "आपका पासवर्ड कम से कम 8 वर्णों का होना चाहिए, जिसमें कम से कम एक संख्यात्मक, एक अपरकेस और एक लोअरकेस अक्षर और एक विशेष वर्ण (@,#,$, आदि) हो।",
-  "Password must not contain spaces": "पासवर्ड में रिक्त स्थान नहीं होना चाहिए",
-  "Password does not match original": "पासवर्ड मूल से मेल नहीं खाता",
-  "Join Organisation": "संगठन में शामिल हों",
-  "We're": "हमें",
-  "Glad": "खुशी है कि",
-  "you're": "आप",
-  "Back": "वापस आ गए हैं",
-  "Let's": "आइए",
-  "get": "आपको",
-  "you": "साइनअप",
-  "SignUp": "कराते हैं",
-  "Please wait": "कृपया प्रतीक्षा कीजिये",
-  "for organisation(s) to accept your invitation.": "संगठन (ओं) के लिए आपका निमंत्रण स्वीकार करने के लिए।",
-  "Add Event Title": "घटना का शीर्षक जोड़ें",
-  "Where is the event": "घटना कहाँ है",
-  "Add Location": "स्थान जोड़ना",
-  "Describe the event": "घटना का वर्णन करें",
-  "Add Description": "विवरण जोड़ें",
-  "Add Event": "कार्यक्रम जोड़ें",
-  "Add": "इसे जोड़ें",
-  "Add Image": "छवि जोड़ें",
-  "Select Start Date and Time": "प्रारंभ दिनांक और समय चुनें",
-  "Select End Date and Time": "समाप्ति तिथि और समय चुनें",
-  "Does not repeat": "यह दोहराता नहीं है",
-  "Keep Public": "सार्वजनिक रखें",
-  "Keep Registerable": "पंजीकरण योग्य रखें",
-  "Event Details": "घटना की जानकारी",
-  "Register": "रजिस्टर करें",
-  "Created by": "के द्वारा बनाई गई",
-  "public": "सह लोक",
-  "private": "निजी",
-  "Description": "विवरण",
-  "Admins": "व्यवस्थापक",
-  "Attendees": "सहभागी",
-  "See all": "सभी देखें",
-  "Start Date": "आरंभ करने की तिथि",
-  "End Date": "समाप्ति तिथि",
-  "Cancel": "रद्द करना",
-  "Done": "किया हुआ",
-  "Explore Events": "घटनाओं का अन्वेषण करें",
-  "Add Date": "तिथि जोड़ें",
-  "Event": "प्रतिस्पर्धा",
-  "My Events": "मेरे कार्यक्रम",
-  "Public Events": "सार्वजनिक कार्यक्रम",
-  "Private Events": "निजी कार्यक्रम",
-  "Liked by": "द्वारा पसंद किया गया",
-  "Comments": "टिप्पणियाँ",
-  "FirstName LastName": "प्रथम नाम अंतिम नाम",
-  "Pinned Posts": "चिपके पत्र",
-  "Profile": "प्रोफ़ाइल",
-  "Email": "ईमेल",
-  "Update": "अपडेट करें",
-  "App Settings": "एप्लिकेशन सेटिंग",
-  "Language": "भाषा: हिन्दी",
-  "dark mode": "डार्क मोड",
-  "font size": "फ़ॉन्ट आकार",
-  "Help": "मदद",
-  "Reach out to us for help": "मदद के लिए हमसे संपर्क करें",
-  "Donate Us": "हमें दान करें",
-  "Help us to develop for you": "आपके लिए विकास करने में हमारी सहायता करें",
-  "Log out from Talawa": "तलवा से लॉग आउट करें",
-  "Share News": "समाचार साझा करें",
-  "Post": "पद",
-  "Organization Name": "संगठन का नाम",
-  "Add hasthtag": "हैशटैग जोड़ें",
-  "Write here what do you want to share": "यहां लिखें कि आप क्या साझा करना चाहते हैं",
-  "Join selected organisation": "चयनित संगठन से जुड़ें",
-  "Home": "घर",
-  "Events": "आयोजन",
-  "Chat": "चैट",
-  "Chat Screen": "चैट स्क्रीन",
-  "Confirm": "पुष्टि करें",
-  "Confirmation": "पुष्टीकरण",
-  "Close": "बंद करे",
-  "Switch Organization": "संगठन स्विच करें",
-  "Join new Organization": "नए संगठन में शामिल हों",
-  "Leave Current Organization": "वर्तमान संगठन छोड़ें",
-  "Creator": "निर्माता",
-  "Public": "सार्वजनिक",
-  "Private": "निजी",
-  "No Internet": "कोई इंटरनेट नहीं",
-  "Subscribed": "सदस्यता ली गई",
-  "from": "से",
-  "See all Pinned news": "सभी पिन किए गए समाचार देखें",
-  "show more": "अधिक दिखाएं",
-  "show less": "कम दिखाएं",
-  "Likes": "पसंद",
-  "comments": "टिप्पणियां",
-  "Final": "फाइनल",
-  "Enter Details": "विवरण दर्ज करें",
-  "Select\nOrganization": "चुनते हैं\nसंगठन",
-  "already selected": "पहले से चयनित",
-  "Switched to": "इस पर स्विच किया गया",
-  "Organisation already joined": "संगठन पहले ही शामिल हो चुका है",
-  "Membership request already sent": "सदस्यता अनुरोध पहले ही भेजा जा चुका है",
-  "Select one organization to continue": "जारी रखने के लिए एक संगठन चुनें",
-  "SomeThing went wrong": "कुछ गलत हो गया",
-  "Join in request sent to": "ज्वाइन इन रिक्वेस्ट इन को भेजा गया",
-  "successfully": "सफलतापूर्वक",
-  "Are you sure you want to logout?": "क्या आप वाकई लॉगआउट करना चाहते हैं?",
-  "Logout": "लॉगआउट",
-  "Settings": "अपनी सेटिंग्स बदलें",
-  "Dark Theme": "डार्क थीम",
-  "Error": "गलती",
-  "Warning": "चेतावनी",
-  "Information": "जानकारी",
-  "No account registered with this email": "सर्वर नहीं चल रहा/गलत url",
-  "Dismiss": "नकार",
-  "No organizations found Please contact your admin": "कोई संगठन नहीं मिला! कृपया अपने व्यवस्थापक से संपर्क करें",
-  "For complete access, please": "पूर्ण पहुंच के लिए, कृपया",
-  "  join an organization.": "  किसी संगठन से जुड़ें.",
-  "JOIN":"जोड़ना",
-  "Camera": "कैमरा",
-  "Gallery": "गैलरी"
+    "Hello": "नमस्ते",
+    "User Name": "उपयोगकर्ता नाम",
+    "we've": "हमने",
+    "got you covered": "आपको कवर कर लिया है",
+    "password": "पास वर्ड दर्ज करें",
+    "Enter new password": "नया पासवर्ड दर्ज करें",
+    "Re-Enter your password": "दुबारापासवडृ िलखो",
+    "Change Password": "पासवर्ड बदलें",
+    "Email Hint": "test@test.org",
+    "Enter your registered Email": "अपना पंजीकृत ईमेल दर्ज करें",
+    "Enter your password": "अपना पासवर्ड डालें",
+    "Forgot password": "क्या आप पासवर्ड भूल गए",
+    "Login": "लॉग इन करें",
+    "Sit back relax, we'll": "आराम से बैठें, हम",
+    "Recover": "रिकवर कर लेंगे",
+    "your password": "आपका पासवर्ड",
+    "Recover Password": "पासवर्ड पुनः प्राप्त करना",
+    "Select Language": "भाषा का चयन करें",
+    "Default": "डिफ़ॉल्ट मान",
+    "Select": "चुनते हैं",
+    "Notification Feature is not installed": "अधिसूचना सुविधा स्थापित नहीं है",
+    "Selected Organization": "चयनित संगठन",
+    "Continue": "जारी रखें",
+    "Enter Community URL": "समुदाय URL दर्ज करें",
+    "Verify": "सत्यापित करें",
+    "Sign Up": "साइन अप करें",
+    "Change language": "भाषा बदलें",
+    "First Name Hint": "राहुल",
+    "Enter your first name": "अपना पहला नाम दर्ज करें",
+    "Last Name Hint": "कुमार",
+    "Enter your last name": "अपना अंतिम नाम दर्ज करें",
+    "Confirm your password": "अपने पासवर्ड की पुष्टि करें",
+    "Next": "अगला",
+    "Request Sent to": "अनुरोध भेजा गया",
+    "Log out": "लॉग आउट",
+    "Join": "अपने संगठनों",
+    "and": "से",
+    "Collaborate": "जुड़ें",
+    "with your": "और सहयोग करें",
+    "Organizations": "",
+    "Title from the viewMode GSoC branch": "व्यूमोड जीएसओसी शाखा से शीर्षक",
+    "Please verify URL first": "कृपया पहले URL सत्यापित करें",
+    "Enter a valid URL": "एक मान्य यूआरएल दर्ज करें",
+    "Firstname must not be left blank.": "प्रथम नाम खाली नहीं छोड़ा जाना चाहिए।",
+    "Invalid Firstname": "अमान्य प्रथम नाम",
+    "Lastname must not be left blank.": "उपनाम खाली नहीं छोड़ा जाना चाहिए।",
+    "Invalid Lastname": "अमान्य अंतिम नाम",
+    "Email must not be left blank": "ईमेल खाली नहीं छोड़ना चाहिए",
+    "Please enter a valid Email Address": "कृपया एक वैध ई - मेल एड्रेस डालें",
+    "Password must not be left blank": "पासवर्ड खाली नहीं छोड़ना चाहिए",
+    "Your password must be at least 8 characters long, contain at least one numeric, one uppercase and one lowercase letters and one special character (@,#,$,etc.)": "आपका पासवर्ड कम से कम 8 वर्णों का होना चाहिए, जिसमें कम से कम एक संख्यात्मक, एक अपरकेस और एक लोअरकेस अक्षर और एक विशेष वर्ण (@,#,$, आदि) हो।",
+    "Password must not contain spaces": "पासवर्ड में रिक्त स्थान नहीं होना चाहिए",
+    "Password does not match original": "पासवर्ड मूल से मेल नहीं खाता",
+    "Join Organisation": "संगठन में शामिल हों",
+    "We're": "हमें",
+    "Glad": "खुशी है कि",
+    "you're": "आप",
+    "Back": "वापस आ गए हैं",
+    "Let's": "आइए",
+    "get": "आपको",
+    "you": "साइनअप",
+    "SignUp": "कराते हैं",
+    "Please wait": "कृपया प्रतीक्षा कीजिये",
+    "for organisation(s) to accept your invitation.": "संगठन (ओं) के लिए आपका निमंत्रण स्वीकार करने के लिए।",
+    "Add Event Title": "घटना का शीर्षक जोड़ें",
+    "Where is the event": "घटना कहाँ है",
+    "Add Location": "स्थान जोड़ना",
+    "Describe the event": "घटना का वर्णन करें",
+    "Add Description": "विवरण जोड़ें",
+    "Add Event": "कार्यक्रम जोड़ें",
+    "Add": "इसे जोड़ें",
+    "Add Image": "छवि जोड़ें",
+    "Select Start Date and Time": "प्रारंभ दिनांक और समय चुनें",
+    "Select End Date and Time": "समाप्ति तिथि और समय चुनें",
+    "Does not repeat": "यह दोहराता नहीं है",
+    "Keep Public": "सार्वजनिक रखें",
+    "Keep Registerable": "पंजीकरण योग्य रखें",
+    "Event Details": "घटना की जानकारी",
+    "Register": "रजिस्टर करें",
+    "Created by": "के द्वारा बनाई गई",
+    "public": "सह लोक",
+    "private": "निजी",
+    "Description": "विवरण",
+    "Admins": "व्यवस्थापक",
+    "Attendees": "सहभागी",
+    "See all": "सभी देखें",
+    "Start Date": "आरंभ करने की तिथि",
+    "End Date": "समाप्ति तिथि",
+    "Cancel": "रद्द करना",
+    "Done": "किया हुआ",
+    "Explore Events": "घटनाओं का अन्वेषण करें",
+    "Add Date": "तिथि जोड़ें",
+    "Event": "प्रतिस्पर्धा",
+    "My Events": "मेरे कार्यक्रम",
+    "Public Events": "सार्वजनिक कार्यक्रम",
+    "Private Events": "निजी कार्यक्रम",
+    "Liked by": "द्वारा पसंद किया गया",
+    "Comments": "टिप्पणियाँ",
+    "FirstName LastName": "प्रथम नाम अंतिम नाम",
+    "Pinned Posts": "चिपके पत्र",
+    "Profile": "प्रोफ़ाइल",
+    "Email": "ईमेल",
+    "Update": "अपडेट करें",
+    "App Settings": "एप्लिकेशन सेटिंग",
+    "Language": "भाषा: हिन्दी",
+    "dark mode": "डार्क मोड",
+    "font size": "फ़ॉन्ट आकार",
+    "Help": "मदद",
+    "Reach out to us for help": "मदद के लिए हमसे संपर्क करें",
+    "Donate Us": "हमें दान करें",
+    "Help us to develop for you": "आपके लिए विकास करने में हमारी सहायता करें",
+    "Log out from Talawa": "तलवा से लॉग आउट करें",
+    "Share News": "समाचार साझा करें",
+    "Post": "पद",
+    "Organization Name": "संगठन का नाम",
+    "Add hasthtag": "हैशटैग जोड़ें",
+    "Write here what do you want to share": "यहां लिखें कि आप क्या साझा करना चाहते हैं",
+    "Join selected organisation": "चयनित संगठन से जुड़ें",
+    "Home": "घर",
+    "Events": "आयोजन",
+    "Chat": "चैट",
+    "Chat Screen": "चैट स्क्रीन",
+    "Confirm": "पुष्टि करें",
+    "Confirmation": "पुष्टीकरण",
+    "Close": "बंद करे",
+    "Switch Organization": "संगठन स्विच करें",
+    "Join new Organization": "नए संगठन में शामिल हों",
+    "Leave Current Organization": "वर्तमान संगठन छोड़ें",
+    "Creator": "निर्माता",
+    "Public": "सार्वजनिक",
+    "Private": "निजी",
+    "No Internet": "कोई इंटरनेट नहीं",
+    "Subscribed": "सदस्यता ली गई",
+    "from": "से",
+    "See all Pinned news": "सभी पिन किए गए समाचार देखें",
+    "show more": "अधिक दिखाएं",
+    "show less": "कम दिखाएं",
+    "Likes": "पसंद",
+    "comments": "टिप्पणियां",
+    "Final": "फाइनल",
+    "Enter Details": "विवरण दर्ज करें",
+    "Select\nOrganization": "चुनते हैं\nसंगठन",
+    "already selected": "पहले से चयनित",
+    "Switched to": "इस पर स्विच किया गया",
+    "Organisation already joined": "संगठन पहले ही शामिल हो चुका है",
+    "Membership request already sent": "सदस्यता अनुरोध पहले ही भेजा जा चुका है",
+    "Select one organization to continue": "जारी रखने के लिए एक संगठन चुनें",
+    "SomeThing went wrong": "कुछ गलत हो गया",
+    "Join in request sent to": "ज्वाइन इन रिक्वेस्ट इन को भेजा गया",
+    "successfully": "सफलतापूर्वक",
+    "Are you sure you want to logout?": "क्या आप वाकई लॉगआउट करना चाहते हैं?",
+    "Logout": "लॉगआउट",
+    "Settings": "अपनी सेटिंग्स बदलें",
+    "Dark Theme": "डार्क थीम",
+    "Error": "गलती",
+    "Warning": "चेतावनी",
+    "Information": "जानकारी",
+    "No account registered with this email": "सर्वर नहीं चल रहा/गलत url",
+    "Dismiss": "नकार",
+    "No organizations found Please contact your admin": "कोई संगठन नहीं मिला! कृपया अपने व्यवस्थापक से संपर्क करें",
+    "For complete access, please": "पूर्ण पहुंच के लिए, कृपया",
+    "  join an organization.": "  किसी संगठन से जुड़ें.",
+    "JOIN": "जोड़ना",
+    "Camera": "कैमरा",
+    "Gallery": "गैलरी",
+    "NEXT": "अगला",
+    "COMPLETE": "पूर्ण",
+    "tStart app tour to know talawa functioning": "Talawa कार्यप्रणाली जानने के लिए ऐप टूर शुरू करें",
+    "Scan QR": "QR स्कैन करें",
+    "Add tag": "टैग जोड़ें",
+    "Enter the Tag": "टैग दर्ज करें",
+    "Title": "शीर्षक",
+    "Choose on map": "नक्शे पर चुनें",
+    "Where is the event?": "इवेंट कहाँ है?",
+    "Add Members": "सदस्य जोड़ें",
+    "All Events": "सभी ईवेंट्स",
+    "Created Events": "बनाए गए ईवेंट्स",
+    "Registered Events": "पंजीकृत ईवेंट्स",
+    "Send": "भेजें",
+    "Write your comment here..": "यहां अपनी टिप्पणी लिखें..",
+    "You need access": "आपको पहुँच की आवश्यकता है",
+    "Request access, or switch to an account with access": "पहुँच का अनुरोध करें, या पहुँच वाले खाते में स्विच करें",
+    "Request Access": "पहुँच का अनुरोध करें",
+    "Last Name": "अंतिम नाम",
+    "First Name": "पहला नाम",
+    "Edit Profile": "प्रोफ़ाइल संपादित करें",
+    "Log Out": "लॉग आउट",
+    "Please Select an amount": "कृपया एक राशि चुनें",
+    "Input custom amount": "कस्टम राशि दर्ज करें",
+    "Organisation Name": "संगठन का नाम",
+    "Choose an Organization": "एक संगठन चुनें",
+    "Your Report has been sent to the Admin": "आपकी रिपोर्ट एडमिन को भेज दी गई है",
+    "Report the post to the Admin": "पोस्ट को एडमिन को रिपोर्ट करें",
+    "Do you really want to delete the post?": "क्या आप वाकई पोस्ट को हटाना चाहते हैं?",
+    "Liked": "पसंद किया",
+    "Add Task Title": "टास्क का शीर्षक जोड़ें",
+    "Describe the task": "कार्य का वर्णन करें",
+    "Looks like there aren't any events.": "लगता है कि कोई इवेंट नहीं हैं।",
+    "You have not created any event.": "आपने कोई इवेंट नहीं बनाया है।",
+    "No registered events are present": "कोई पंजीकृत इवेंट मौजूद नहीं हैं",
+    "There aren't any public events.": "कोई सार्वजनिक इवेंट नहीं हैं।",
+    "There aren't any private events.": "कोई निजी इवेंट नहीं हैं।",
+    "Donate to the Community": "समुदाय को दान करें",
+    "Donating to": "दान देना"
 }
