adding more translations

--- a/lang/es.json
+++ b/lang/es.json
@@ -202,5 +202,7 @@
     "There aren't any public events.": "No hay eventos públicos.",
     "There aren't any private events.": "No hay eventos privados.",
     "Donate to the Community": "Donar a la Comunidad",
-    "Donating to": "Donando a"
+    "Donating to": "Donando a",
+    "Are you sure you want to delete this event?": "¿Estás seguro de que quieres eliminar este evento?",
+    "Are you sure you want to exit this organization?": "¿Estás seguro de que quieres salir de esta organización?"
 }
