--- a/lang/fr.json
+++ b/lang/fr.json
@@ -202,5 +202,7 @@
     "There aren't any public events.": "Il n'y a pas d'événements publics.",
     "There aren't any private events.": "Il n'y a pas d'événements privés.",
     "Donate to the Community": "Faire un don à la Communauté",
-    "Donating to": "Don à"
+    "Donating to": "Don à",
+    "Are you sure you want to delete this event?": "Êtes-vous sûr de vouloir supprimer cet événement?",
+    "Are you sure you want to exit this organization?": "Êtes-vous sûr de vouloir quitter cette organisation?"
 }
