--- a/lang/hi.json
+++ b/lang/hi.json
@@ -202,5 +202,7 @@
     "There aren't any public events.": "कोई सार्वजनिक इवेंट नहीं हैं।",
     "There aren't any private events.": "कोई निजी इवेंट नहीं हैं।",
     "Donate to the Community": "समुदाय को दान करें",
-    "Donating to": "दान देना"
+    "Donating to": "को दान देना",
+    "Are you sure you want to delete this event?": "क्या आप वाकई इस इवेंट को हटाना चाहते हैं?",
+    "Are you sure you want to exit this organization?": "क्या आप वाकई इस संगठन से बाहर जाना चाहते हैं?"
 }
