--- a/lang/pt.json
+++ b/lang/pt.json
@@ -202,5 +202,7 @@
     "There aren't any public events.": "Não há eventos públicos.",
     "There aren't any private events.": "Não há eventos privados.",
     "Donate to the Community": "Doar para a Comunidade",
-    "Donating to": "Doando para"
+    "Donating to": "Doando para",
+    "Are you sure you want to delete this event?": "Tem certeza de que deseja excluir este evento?",
+    "Are you sure you want to exit this organization?": "Tem certeza de que deseja sair desta organização?"
 }
