--- a/lang/zh.json
+++ b/lang/zh.json
@@ -202,5 +202,7 @@
     "There aren't any public events.": "没有公开的活动。",
     "There aren't any private events.": "没有私人活动。",
     "Donate to the Community": "向社区捐款",
-    "Donating to": "捐赠给"
+    "Donating to": "捐赠给",
+    "Are you sure you want to delete this event?": "您确定要删除此活动吗？",
+    "Are you sure you want to exit this organization?": "您确定要退出这个组织吗？"
 }
