--- a/lang/de.json
+++ b/lang/de.json
@@ -202,5 +202,7 @@
     "There aren't any public events.": "Es gibt keine öffentlichen Veranstaltungen.",
     "There aren't any private events.": "Es gibt keine privaten Veranstaltungen.",
     "Donate to the Community": "An die Gemeinschaft spenden",
-    "Donating to": "Spenden an"
+    "Donating to": "Spenden an",
+    "Are you sure you want to delete this event?": "Sind Sie sicher, dass Sie diese Veranstaltung löschen möchten?",
+    "Are you sure you want to exit this organization?": "Sind Sie sicher, dass Sie diese Organisation verlassen möchten?"
 }
