--- a/lang/en.json
+++ b/lang/en.json
@@ -202,5 +202,7 @@
     "There aren't any public events.": "There aren't any public events.",
     "There aren't any private events.": "There aren't any private events.",
     "Donate to the Community": "Donate to the Community",
-    "Donating to": "Donating to"
+    "Donating to": "Donating to",
+    "Are you sure you want to delete this event?": "Are you sure you want to delete this event?",
+    "Are you sure you want to exit this organization?": "Are you sure you want to exit this organization?"
 }
