--- a/lang/ja.json
+++ b/lang/ja.json
@@ -202,5 +202,7 @@
     "There aren't any public events.": "公開イベントはありません。",
     "There aren't any private events.": "プライベートイベントはありません。",
     "Donate to the Community": "コミュニティに寄付する",
-    "Donating to": "に寄付する"
+    "Donating to": "に寄付する",
+    "Are you sure you want to delete this event?": "このイベントを削除してもよろしいですか？",
+    "Are you sure you want to exit this organization?": "この組織を退出してもよろしいですか？"
 }
