--- a/lang/de.json
+++ b/lang/de.json
@@ -163,46 +163,5 @@
     "  join an organization.": "  einer Organisation beitreten.",
     "JOIN": "BEITRETEN",
     "Camera": "Kamera",
-    "Gallery": "Galerie",
-    "NEXT": "NÄCHSTE",
-    "COMPLETE": "VOLLSTÄNDIG",
-    "Start app tour to know talawa functioning": "Starten Sie die App-Tour, um die Funktionsweise von Talawa zu erfahren",
-    "Scan QR": "QR scannen",
-    "Add tag": "Tag hinzufügen",
-    "Enter the Tag": "Geben Sie das Tag ein",
-    "Title": "Titel",
-    "Choose on map": "Auf der Karte wählen",
-    "Where is the event?": "Wo ist das Ereignis?",
-    "Add Members": "Mitglieder hinzufügen",
-    "All Events": "Alle Veranstaltungen",
-    "Created Events": "Erstellte Veranstaltungen",
-    "Registered Events": "Registrierte Veranstaltungen",
-    "Send": "Senden",
-    "Write your comment here..": "Schreiben Sie hier Ihren Kommentar..",
-    "You need access": "Sie benötigen Zugang",
-    "Request access, or switch to an account with access": "Fordern Sie Zugang an oder wechseln Sie zu einem Konto mit Zugang",
-    "Request Access": "Zugang anfordern",
-    "Last Name": "Nachname",
-    "First Name": "Vorname",
-    "Edit Profile": "Profil bearbeiten",
-    "Log Out": "Ausloggen",
-    "Please Select an amount": "Bitte wählen Sie einen Betrag",
-    "Input custom amount": "Benutzerdefinierten Betrag eingeben",
-    "Organisation Name": "Name der Organisation",
-    "Choose an Organization": "Wählen Sie eine Organisation",
-    "Your Report has been sent to the Admin": "Ihr Bericht wurde an den Admin gesendet",
-    "Report the post to the Admin": "Melden Sie den Beitrag dem Admin",
-    "Do you really want to delete the post?": "Möchten Sie den Beitrag wirklich löschen?",
-    "Liked": "Gefällt",
-    "Add Task Title": "Aufgabentitel hinzufügen",
-    "Describe the task": "Beschreiben Sie die Aufgabe",
-    "Looks like there aren't any events.": "Es scheint keine Veranstaltungen zu geben.",
-    "You have not created any event.": "Sie haben keine Veranstaltung erstellt.",
-    "No registered events are present": "Keine registrierten Veranstaltungen vorhanden",
-    "There aren't any public events.": "Es gibt keine öffentlichen Veranstaltungen.",
-    "There aren't any private events.": "Es gibt keine privaten Veranstaltungen.",
-    "Donate to the Community": "An die Gemeinschaft spenden",
-    "Donating to": "Spenden an",
-    "Are you sure you want to delete this event?": "Sind Sie sicher, dass Sie diese Veranstaltung löschen möchten?",
-    "Are you sure you want to exit this organization?": "Sind Sie sicher, dass Sie diese Organisation verlassen möchten?"
+    "Gallery": "Galerie"
 }
