--- a/lang/de.json
+++ b/lang/de.json
@@ -94,7 +94,7 @@
     "My Events": "Meine Veranstaltungen",
     "Public Events": "Öffentliche Veranstaltungen",
     "Private Events": "Private Veranstaltungen",
-    "Liked by": "Gefällt von",
+    "Liked by": "Beliebt bei",
     "Comments": "Kommentare",
     "FirstName LastName": "Vorname Nachname",
     "Pinned Posts": "Angepinnte Beiträge",
@@ -116,52 +116,52 @@
     "Add hasthtag": "Hashtag hinzufügen",
     "Write here what do you want to share": "Schreiben Sie hier, was Sie teilen möchten",
     "Join selected organisation": "Ausgewählter Organisation beitreten",
-    "Home": "Heim",
-    "Events": "Veranstaltungen",
-    "Chat": "Plaudern",
-    "Chat Screen": "Chat-Bildschirm",
-    "Confirm": "Bestätigen Sie",
-    "Confirmation": "Bestätigung",
-    "Close": "Nah dran",
-    "Switch Organization": "Organisation wechseln",
-    "Join new Organization": "Treten Sie einer neuen Organisation bei",
-    "Leave Current Organization": "Aktuelle Organisation verlassen",
-    "Creator": "Schöpferin",
-    "Public": "Öffentlich",
-    "Private": "Privatgelände",
-    "No Internet": "Ohne Internet",
-    "Subscribed": "Gezeichnet",
-    "from": "von",
-    "See all Pinned news": "Alle gepinnten Nachrichten ansehen",
-    "show more": "Zeig mehr",
-    "show less": "zeige weniger",
-    "Likes": "Likes",
-    "comments": "Kommentare",
-    "Final": "Finale",
-    "Enter Details": "Details eingeben",
-    "Select\nOrganization": "Organisation\nauswählen",
-    "already selected": "bereits ausgewählt",
-    "Switched to": "Gewechselt zu",
-    "Organisation already joined": "Organisation bereits beigetreten",
-    "Membership request already sent": "Mitgliedsantrag bereits gesendet",
-    "Select one organization to continue": "Wählen Sie eine Organisation aus, um fortzufahren",
-    "SomeThing went wrong": "Etwas ist schief gelaufen",
-    "Join in request sent to": "Beitrittsanfrage gesendet an",
-    "successfully": "erfolgreich",
-    "Are you sure you want to logout?": "Möchten Sie sich wirklich abmelden?",
-    "Logout": "Ausloggen",
-    "Settings": "Einstellungen",
-    "Dark Theme": "Dunkles Thema",
-    "Error": "Fout",
-    "Warning": "Warnung",
-    "Information": "Informatie",
-    "No account registered with this email": "Server werkt niet/verkeerde url",
-    "Dismiss": "afwijzen",
-    "No organizations found Please contact your admin": "Geen organisaties gevonden! Neem contact op met uw beheerder",
-    "Notification Feature is not installed": "Meddelelsesfunktionen er ikke installeret",
-    "For complete access, please": "Für vollständigen Zugriff bitte",
-    "  join an organization.": "  einer Organisation beitreten.",
-    "JOIN": "BEITRETEN",
-    "Camera": "Kamera",
-    "Gallery": "Galerie"
-}
+   "Home": "Heim",
+   "Events": "Veranstaltungen",
+   "Chat": "Plaudern",
+   "Chat Screen": "Chat-Bildschirm",
+   "Confirm": "Bestätigen Sie",
+   "Confirmation": "Bestätigung",
+   "Close": "Nah dran",
+   "Switch Organization": "Organisation wechseln",
+   "Join new Organization": "Treten Sie einer neuen Organisation bei",
+   "Leave Current Organization": "Aktuelle Organisation verlassen",
+   "Creator": "Schöpferin",
+   "Public": "Öffentlich",
+   "Private": "Privatgelände",
+   "No Internet": "Ohne Internet",
+   "Subscribed": "Gezeichnet",
+   "from": "von",
+   "See all Pinned news": "Alle gepinnten Nachrichten ansehen",
+   "show more": "Zeig mehr",
+   "show less": "zeige weniger",
+   "Likes": "Likes",
+   "comments": "Kommentare",
+   "Final": "Finale",
+   "Enter Details": "Details eingeben",
+   "Select\nOrganization": "Organisation\nauswählen",
+   "already selected": "bereits ausgewählt",
+   "Switched to": "Gewechselt zu",
+   "Organisation already joined": "Organisation bereits beigetreten",
+   "Membership request already sent": "Mitgliedsantrag bereits gesendet",
+   "Select one organization to continue": "Wählen Sie eine Organisation aus, um fortzufahren",
+   "SomeThing went wrong": "Etwas ist schief gelaufen",
+   "Join in request sent to": "Beitrittsanfrage gesendet an",
+   "successfully": "erfolgreich",
+   "Are you sure you want to logout?": "Möchten Sie sich wirklich abmelden?",
+   "Logout": "Ausloggen",
+   "Settings": "Einstellungen",
+   "Dark Theme": "Dunkles Thema",
+   "Error": "Fout",
+   "Warning": "Waarschuwing",
+   "Information": "Informatie",
+   "No account registered with this email": "Server werkt niet/verkeerde url",
+   "Dismiss": "afwijzen",
+   "No organizations found Please contact your admin": "Geen organisaties gevonden! Neem contact op met uw beheerder",
+   "Notification Feature is not installed": "Meddelelsesfunktionen er ikke installeret",
+   "For complete access, please": "Für vollständigen Zugriff bitte",
+   "  join an organization.": "  einer Organisation beitreten.",
+   "JOIN":"BEITRETEN",
+   "Camera": "Kamera",
+   "Gallery": "Galerie"
+  }
