--- a/lang/hi.json
+++ b/lang/hi.json
@@ -166,7 +166,7 @@
   "Gallery": "गैलरी",
   "NEXT": "अगला",
   "COMPLETE": "पूर्ण",
-  "tStart app tour to know talawa functioning": "Talawa कार्यप्रणाली जानने के लिए ऐप टूर शुरू करें",
+  "Start app tour to know talawa functioning": "Talawa कार्यप्रणाली जानने के लिए ऐप टूर शुरू करें",
   "Scan QR": "QR स्कैन करें",
   "Add tag": "टैग जोड़ें",
   "Enter the Tag": "टैग दर्ज करें",
